# pluse-board

./: .gitignore  AGENTS.md  PLAN.md  README.md  pyproject.toml
.beads/: config.yaml  interactions.jsonl  issues.jsonl  metadata.json
.github/: dependabot.yml
.github/actions/setup-bd/: action.yml
.github/codex/prompts/: daily-build-patch.md  daily-build-triage.md
.github/triage/prompts/: daily-build-patch.md  daily-build-triage.md
.github/workflows/: daily-build-triage.yml  daily.yml  dependabot-auto-merge.yml  jules-dependabot-fix.yml  pr-check.yml  slack-beads-create.yml  sqlmesh-bot.yml
dbt_project/: dbt_project.yml  profiles.yml.example
docs/: beads-task-management-design.md  daily-build-triage-tests.md  dataplex-governance-stories.md  intervo-integration-design.md  intervo-integration-stories.md  openlineage-dataplex-design.md  slack-integration-design.md
ingest/: _common.py  check_health_data_freshness.py  check_mart_freshness.py  health_api_client.py  lineage.py  oauth_bootstrap.py  pull_health_api.py
reports/: evidence.config.yaml  package-lock.json  package.json
reports/pages/: about.md  acwr.md  compare.md  exercise.md  index.md  steps.md  strength.md
reports/partials/: acwr_reference_legend.md  acwr_reference_lines.md  week_options.md
scripts/: actionlint  dataplex_dq_scan.sh  dataplex_glossary_links.sh  sqlmesh_pr_comment.py
sqlmesh_project/: config.yaml  external_models.yaml  run_with_lineage.py
sqlmesh_project/audits/: assert_data_in_range.sql  assert_has_rows.sql  assert_interval_not_empty.sql
terraform/: README.md  apis.tf  catalog.tf  datascans.tf  glossary.tf  iam.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
tests/: conftest.py  test_check_health_data_freshness.py  test_common.py  test_health_api_client.py  test_lineage.py  test_oauth_bootstrap.py  test_pull_health_api.py  test_run_with_lineage.py  test_sqlmesh_pr_comment.py
workers/beads-slack/: .dev.vars.example  README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
(+42 files in other folders)
