[project]
name = "pluse-board"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "sqlmesh[web]>=0.235.4",
]

[dependency-groups]
ingest = [
    "google-auth>=2.55.1",
    "google-auth-oauthlib>=1",
    "google-cloud-bigquery>=3.42.1",
    "requests>=2.34.2",
    "pydantic>=2",
]
# SQLMesh: bigquery=データ接続, postgres=state 接続(Neon), github=CI/CD bot。
# state は psycopg2-binary を使う（sqlmesh[postgres] は libpq ビルドが要る
# psycopg2 を引くため、macOS ローカル等で失敗する。binary 版で wheel 配布）。
# github extra は PyGithub を引く（sqlmesh_cicd github が PR チェック/コメントに使う）。
sqlmesh = [
    "sqlmesh[bigquery]",
    "sqlmesh[github]",
    "psycopg2-binary",
]
lineage = [
    "openlineage-python>=1.51.0",
    # SQLMesh のモデル評価を OpenLineage で計装（Phase 2）。set_console() で
    # console を差し替え START/COMPLETE/FAIL + カラム lineage + 実行統計を emit。
    "sqlmesh-openlineage>=0.1.0",
]
